--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ravi4974.github.io/travelorie/",
   "name": "travelorie-ui",
   "version": "0.1.0",
   "private": true,
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +35,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ravi4974.github.io/travelorie/"
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
+  }
 }
